--- a/templates/static/bottom.html
+++ b/templates/static/bottom.html
@@ -22,10 +22,10 @@
     </tr>
     
   </table>
-  <table bgcolor="#f8f8f8;" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
+  <table border="0" cellpadding="0" cellspacing="0" style="background-color: #F8F8F8; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
     <tbody>
       <tr>
-        <td align="center" bgcolor="#555555" style="background-color: #f8f8f8;border-collapse: collapse;" valign="top">
+        <td align="center" style="background-color: #f8f8f8;border-collapse: collapse;" valign="top">
 
           <!-- 600px container -->
           <table border="0" cellpadding="0" cellspacing="0" class="footer" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;" width="600">
