--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -183,14 +183,14 @@
       }
     </style>
   </head>
-  <body bgcolor="#FFFFFF" style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
+  <body  style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
     
     <!-- HEADER -->
-    <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
+    <table border="0" cellpadding="0" cellspacing="0" style="background-color: #FFFFFF; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
       <tbody>
         <tr>
           <!-- HEADER COLOR -->
-          <td align="center" bgcolor="#D1D5DE" style="border-collapse: collapse;" valign="top">
+          <td align="center" style="background-color: #D1D5DE; border-collapse: collapse;" valign="top">
             
             <!-- 640px container -->
             <table border="0" cellpadding="0" cellspacing="0" class="header mobt0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 640px;max-width: 640px;padding-top: 20px;" width="640">
@@ -205,7 +205,7 @@
                             <tbody>
                               <tr>
                                 <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 5px;padding-left: 10px;" valign="top">
-                                  <p class="marb5" style="font-family:'FormaDJRVariable'; font-variation-settings: 'wght' 900;font-size: 22px;line-height: 20px;color: #000000;padding: 0;margin: 0;margin-bottom: 5px;">
+                                  <p class="marb5" style="font-family:'FormaDJRVariable'; font-weight: bold; font-style: bold; font-size: 22px;line-height: 20px;color: #000000;padding: 0;margin: 0;margin-bottom: 5px;">
                                     <!-- QUOTE -->
                                     Imagination<br>Precedes<br> Inspiration<br>Precedes <br>Innovation
                                   </p>
@@ -228,13 +228,13 @@
     </table>
 
     <!-- BODY -->
-    <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
+    <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
       <tbody>
         <tr>
 
 
         <tr>
-          <td align="center" bgcolor="#FFFFFF" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+          <td align="center" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">
 
             <!-- 660px container (white background) -->
             <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
