--- a/templates/featured-special.html
+++ b/templates/featured-special.html
@@ -3,22 +3,22 @@
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" style="border-top-left-radius: 0.8rem; border-top-right-radius: 0.8rem; border-collapse: collapse;border-bottom: 0px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}">
-                    <p style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;"><a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; font-size: 1.2rem;color:#5f5454">{{ item['link_text']}}</a><a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: #6d6b57 !important;">{{ item['title']}}</a>
+                  <td align="left" style="border-top-left-radius: 0.8rem; border-top-right-radius: 0.8rem; border-collapse: collapse;border-left:{{ item["outline_width"]}} solid {{ item["outline_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-top: {{ item["border_width"] }} solid {{ item["border_color"] }}; padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}">
+                    <p style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 22px;font-weight: 900;line-height: 23px;color: {{item["text_color"]}};margin: 0;padding: 0;"><a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; font-weight: 900; font-size: 1.3rem;color:{{ item["light_text_color"]}}">{{ item['category_text']}}</a><a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: {{ item["light_text_color"]}} !important;">{{ item['title']}}</a>
                     </p>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" class="rounded-box-1" style="border-bottom-left-radius: 0.8rem; border-bottom-right-radius: 0.8rem; border-collapse: collapse;background-color: {{ item['background_color']}}">
+                  <td align="left"  style="border-bottom-left-radius: 0.8rem; border-bottom-right-radius: 0.8rem; border: {{item["border_width"]}} {{ item["border_color"]}} solid; border-collapse: collapse;background-color: {{ item['background_color']}}; ">
 
                     <!--[if mso]>
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr><td width="35%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
+                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="290">
                       <tbody>
                         <tr>
                           <td class="padt20 padr10 padl20 padb5" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
-                            <p style="font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
+                            <p style="font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
                               <a href='{{ item['link_ref']}}'><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: 0.8rem;"></a>
                             </p>
                           </td>
@@ -31,10 +31,10 @@
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10 padb5 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
-                            <p class="padb5" style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['link_text']}}</a> →</p>
-                            <p style="mso-line-height-rule: exactly;font-size: 16px;line-height: 18px;font-weight: 400;margin: 0;padding: 0 0 5px 0; color: #6d6b57 !important;">{{ item['subtitle']}}</p>
-                            <p style="font-family: '{{ item['font_family'] }}'; font-size: 14px;line-height: 18px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }} 
+                            <p class="padb5" style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 16px;line-height: 23px;font-weight: 600;color: {{item["text_color"]}};margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: {{item["text_color"]}} !important;">{{ item['link_text']}}</a> →</p>
+                            <p style="mso-line-height-rule: exactly;font-size: 16px;line-height: 18px;font-weight: 400;margin: 0;padding: 0 0 5px 0; color: {{ item["light_text_color"]}} !important;">{{ item['subtitle']}}</p>
+                            <p style="font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 18px;font-weight: 400;color:{{item["text_color"]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }} 
                               </p>
                           </td>
                         </tr>
