--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -1,10 +1,26 @@
+    <!-- start full-width-item-header.html-->
+    <!-- mayday mayday mayday -->
+  <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
+      <tbody>
+        <tr>
+          <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
+        </tr>
+               <tr>
+                <td align="center" style="background-color: {{ item['header_background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }}; {{ item['extra_box_style'] }}; padding-top: 15px ;padding-bottom: 15px;">
+                  <span style="mso-line-height-rule: exactly; font-size: {{ item['header_font_size'] }}; font-family: '{{ item['header_font_family'] }}'; font-style: {{ item['header_font_style']}}; font-weight: {{item['header_font_weight']}}; line-height: normal; color: #000000; margin: 0; padding: 0;">{{ item['header_text']}}</span>
+                </td>
+              </tr>
+              </tbody>
+              </table>
+    <!-- end full-width-item-header.html -->
+
 <!-- start full-width-item.html-->
 <tr style="border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }};{{ item['extra_box_style'] }};">
-    <td style="background:{{ item['background_color'] }}; ">
+    <td style="background-color: {{ item['background_color'] }}; ">
         <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="600px">
             <tbody>
-              <tr>
-                <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
+              <tr><!-- mother of fucking hell -->
+                <td class="padt15" style="border-collapse: collapse;padding-top: 15px;" valign="top">
                   <p style="font-family: '{{ item['title_font_family'] }}'; font-size: '{{ item['title_font_size'] }}';  line-height: {{ item['line_height'] }}; font-weight: 400; color: {{ item['text_color'] }};padding: 0; margin: 0; margin-bottom: 15px;">
                     <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px; max-width: 600px; width: 100%; border-radius: {{item['image_corner_radius'] }};"></a>
                   </p>
@@ -20,10 +36,10 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600">
             <tbody>
               <tr>
-                <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
+                <td style="border-collapse: collapse;padding-top: 15px;" valign="top">
 
                   <span style="mso-line-height-rule: exactly; font-size: {{ item['font_size']}}; line-height: {{ item['line_height']}}; font-weight: bold; color: #000000;margin: 0; padding: 0 0 15px 0; padding-bottom: 5px; font-family: '{{ item['font_family'] }}';">
-                    <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></span>
+                    <a href="{{ item['link_ref']}}" style="text-decoration: underline; color: {{ item['text_color'] }} !important;">{{ item['title']}}</a></span>
                     <br/>
                   <p style="mso-line-height-rule: exactly; font-size: {{ item['font_size']}};  font-family: '{{ item['font_family'] }}'; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height']}};  font-weight: bold; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</p>
                   
