--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -217,7 +217,7 @@
       <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
         <tbody>            
             <tr>
-              <td align="center" style="padding-left: 10px; padding-right: 10px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+              <td align="center" style="background-color: #FFFFFF;border-collapse: collapse;" valign="top">
                 
                 <!-- 660px container (white background) -->
                 <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
